feat: Add project thumbnail and cards

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>My Homepage!</h1>
+        <h1>Andrew Tran</h1>
         <nav>
             <ul>
                 <li>Home</li>
@@ -15,22 +15,89 @@
                 <li>About</li>
             </ul>
         </nav>
-        <main>Main
+
+        <main>
             <section class="about-me">
                 About me
             </section>
 
             <section class="projects-cont">
-                    <div class="projects">Super Cool Project
-                        <div class="subtext">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/battleship.png">
+                    <div class="project-sub">
+                        <div class="project-name">Battleship</div>
+                        <div class="project-text">Webapp of the classic <em>Battleship</em> game. Play against a computer player and try to destroy all of their ships before they destroy yours.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/star.svg">
-                            <img class="icon" src="./img/icons/watch.svg">
-                            <img class="icon" src="./img/icons/share.svg">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
                         </div>
                     </div>
+                </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/tictactoe.png">
+                    <div class="project-sub">
+                        <div class="project-name">Tic-Tac-Toe</div>
+                        <div class="project-text">Play a game of <em>Tic-Tac-Toe</em> against another player.</div>
+                        <div class="project-btns">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/admin-dashboard.png">
+                    <div class="project-sub">
+                        <div class="project-name">Admin Dashboard</div>
+                        <div class="project-text">A webpage layout design for a general dashboard on the admin page.</div>
+                        <div class="project-btns">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/library.png">
+                    <div class="project-sub">
+                        <div class="project-name">Library</div>
+                        <div class="project-text"><em>My Library</em> is a simple library webapp concept that displays user-inputted book entries and keeping track of which books are read.</div>
+                        <div class="project-btns">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/etch-pad.png">
+                    <div class="project-sub">
+                        <div class="project-name">Etch-Pad</div>
+                        <div class="project-text">The <em>magic Etch-Pad</em> is a webapp that allows you to paint on a customizable board. Features include random colour mode, erase mode, and resizing the resolution of the canvas.</div>
+                        <div class="project-btns">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <img class="project-img" src="./img/projects/calculator.png">
+                    <div class="project-sub">
+                        <div class="project-name">Simple Calculator</div>
+                        <div class="project-text">As the project name implies, this is a basic webapp that contains a functional, <em>no-frills</em> calculator.</div>
+                        <div class="project-btns">
+                            <img class="icon" src="./img/icons/github-mark.png">
+                            <img class="icon" src="./img/icons/external-link.png">
+                        </div>
+                    </div>
+                </div>
+
             </section>
         </main>
+
         <footer>
             <h2>Contact me</h2>
         </footer>
