--- a/src/index.html
+++ b/src/index.html
@@ -12,94 +12,126 @@
             <ul>
                 <li>Home</li>
                 <li>Portfolio</li>
+                <li>Hobbies</li>
                 <li>About</li>
             </ul>
         </nav>
 
         <main>
             <section class="about-me">
-                About me
+                <img class="about-me-img" src="./img/minglee.png">
+                <div class="about-me-card">
+                    <h2>About me</h2>
+                    <p class="about-me-desc">Hey there! I am a self-taught programmer who wants to pursue a career in web development. My original background comes from electrical engineering, working with power system distribution for buildings. I have always been a <span class="diy"><em>DIY</em>*</span>, hands-on kind of guy who enjoys designing and creating things. Hobbies of mine include wood-working, 3D printing, rock-climbing, and of course... video games.</p>
+                    <div class="project-btns">
+                        <a href="https://github.com/andrewtran28/battleship">
+                            <img class="icon" src="./img/icons/github-mark.png"></a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/battleship/">
+                            <img class="icon" src="./img/icons/external-link.png"></a>
+                    </div>
+                </div>
             </section>
 
             <section class="projects-cont">
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/battleship.png">
                     <div class="project-sub">
                         <div class="project-name">Battleship</div>
                         <div class="project-text">Webapp of the classic <em>Battleship</em> game. Play against a computer player and try to destroy all of their ships before they destroy yours.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/battleship">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/battleship/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/tictactoe.png">
                     <div class="project-sub">
                         <div class="project-name">Tic-Tac-Toe</div>
                         <div class="project-text">Play a game of <em>Tic-Tac-Toe</em> against another player.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/tic-tac-toe">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/tic-tac-toe/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/admin-dashboard.png">
                     <div class="project-sub">
                         <div class="project-name">Admin Dashboard</div>
                         <div class="project-text">A webpage layout design for a general dashboard on the admin page.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/admin-dashboard">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/admin-dashboard/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/library.png">
                     <div class="project-sub">
                         <div class="project-name">Library</div>
                         <div class="project-text"><em>My Library</em> is a simple library webapp concept that displays user-inputted book entries and keeping track of which books are read.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/library">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/library/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/etch-pad.png">
                     <div class="project-sub">
                         <div class="project-name">Etch-Pad</div>
                         <div class="project-text">The <em>magic Etch-Pad</em> is a webapp that allows you to paint on a customizable board. Features include random colour mode, erase mode, and resizing the resolution of the canvas.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/etch-pad">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/etch-pad/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
                 <div class="project">
                     <img class="project-img" src="./img/projects/calculator.png">
                     <div class="project-sub">
                         <div class="project-name">Simple Calculator</div>
                         <div class="project-text">As the project name implies, this is a basic webapp that contains a functional, <em>no-frills</em> calculator.</div>
                         <div class="project-btns">
-                            <img class="icon" src="./img/icons/github-mark.png">
-                            <img class="icon" src="./img/icons/external-link.png">
+                            <a href="https://github.com/andrewtran28/calculator">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/calculator/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
                 </div>
-
             </section>
         </main>
 
         <footer>
-            <h2>Contact me</h2>
+            <div class="contact-cont">
+                <h2>Contact me</h2>
+                <p>Feel free to reach out to me for any inquiries or opportunities if you think our work can be mutually beneficial!</p>
+                <p><span>123 Capital Street</span><br>
+                    <span>Ottawa, Ontario, Canada</span>   
+                    <div class="contact-card">
+                        <img class="icon" src="./img/icons/phone.png">
+                        <span>613-555-5555</span><br>
+                    </div>
+                    <div class="contact-card">
+                        <img class="icon" src="./img/icons/email.png">
+                        <span>andrew.tran@fakemail.com</span>
+                    </div>
+                </p> 
+                
+            </div>
+            <img id="contact-img" src="./img/minglee2.png">
         </footer>
     </body>
 </html>
