--- a/src/index.html
+++ b/src/index.html
@@ -22,19 +22,18 @@
                     <section class="about-me">
                         <div class="about-me-img-cont">
                             <picture>
-                                <source srcset="./img/minglee.png" media="(min-width: 1000px)">
-                                <img class="topImage" src="./img/minglee-2.png" alt="">
+                                <source class="about-me-img" srcset="./img/minglee.png" media="(min-width: 400px)">
+                                <img class="about-me-img" src="./img/minglee-2.png" alt="">
                             </picture>
                             <div class="img-name">Andrew Tran</div>
                         </div>
                         <div class="about-me-card">
                             <h2>About me</h2>
-                            <p class="about-me-desc">Hey there! I am a self-taught programmer who wants to pursue a career in web development. My original background comes from electrical engineering, working with power system distribution for buildings. I have always been a <em>DIY</em>, hands-on kind of guy who enjoys designing and creating things. Hobbies of mine include wood-working, 3D printing, rock-climbing, and of course... video games.</p>
-                            <div class="project-btns">
-                                <a href="https://github.com/andrewtran28/battleship">
-                                    <img class="icon" src="./img/icons/github-mark.png"></a>
-                                <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/battleship/">
-                                    <img class="icon" src="./img/icons/external-link.png"></a>
+                            <p class="about-me-text">Hey there! I am a self-taught programmer who wants to pursue a career in web development. My original background comes from electrical engineering, working with power system distribution for buildings. I have always been a <em>DIY</em>, hands-on kind of guy who enjoys designing and creating things. Hobbies of mine include wood-working, 3D printing, rock-climbing, and of course... video games.</p>
+                            <div class="about-btns">
+                                <a href="https://github.com/andrewtran28"><img class="contact-icon" src="./img/icons/github-mark.png"></a>
+                                <img class="contact-icon" src="./img/icons/linkedin.png">
+                                <img class="contact-icon" src="./img/icons/twitter.png">
                             </div>
                         </div>
                     </section>
@@ -137,14 +136,17 @@
                         <img class="icon" src="./img/icons/email.png">
                         <span>andrew.tran@fakemail.com</span>
                     </div>
+                    <div class="contact-btns">
+                        <a href="https://github.com/andrewtran28"><img class="contact-icon" src="./img/icons/github-mark_light.png"></a>
+                        <img class="contact-icon" src="./img/icons/linkedin_light.png">
+                        <img class="contact-icon" src="./img/icons/twitter_light.png">
+                    </div>
                 </p> 
-                
             </div>
             <picture>
                 <source id="contact-img" media="(max-width: 1050px)" srcset="./img/minglee2-2.png">
                 <img id="contact-img" src="./img/minglee2.png" alt="">
-              </picture>
-            <!-- <img id="contact-img" src="./img/minglee2.png"> -->
+            </picture>
         </footer>
     </body>
 </html>
