Add new projects to section and stylize

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,19 @@
                     </div>
                 </div>
                 <div class="project">
+                    <img class="project-img" src="./img/projects/weather-app.png">
+                    <div class="project-sub">
+                        <div class="project-name">myWeather App</div>
+                        <div class="project-text">This is a webapp that takes a given location and retrieves weather data from <em>Visual Crossing</em> API. The data is shown, as well as a related GIF from <em>GIPHY</em>.</div>
+                        <div class="project-btns">
+                            <a href="https://github.com/andrewtran28/weather-app">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/weather-app/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
                     <img class="project-img" src="./img/projects/tictactoe.png">
                     <div class="project-sub">
                         <div class="project-name">Tic-Tac-Toe</div>
@@ -115,6 +128,19 @@
                             <a href="https://github.com/andrewtran28/calculator">
                                 <img class="icon" src="./img/icons/github-mark.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/calculator/">
+                                <img class="icon" src="./img/icons/external-link.png"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="./img/projects/signup-form.png">
+                    <div class="project-sub">
+                        <div class="project-name">Sign-Up Form</div>
+                        <div class="project-text">A webpage layout design for a "sign-up" form. A small concept project that demonstrates form filling and different types of input field requirements. (Please do not submit any real data).</div>
+                        <div class="project-btns">
+                            <a href="https://github.com/andrewtran28/signup-form">
+                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/signup-form/">
                                 <img class="icon" src="./img/icons/external-link.png"></a>
                         </div>
                     </div>
