--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homepage</title>
-    </head>
+    <script defer src="main.js"></script></head>
 
     <body>
         <h1>Andrew Tran</h1>
@@ -22,8 +22,8 @@
                     <section class="about-me">
                         <div class="about-me-img-cont">
                             <picture>
-                                <source class="about-me-img" srcset="./img/minglee.png" media="(min-width: 400px)">
-                                <img class="about-me-img" src="./img/minglee-2.png" alt="">
+                                <source class="about-me-img" srcset="faf16f994affc2bd4284.png" media="(min-width: 400px)">
+                                <img class="about-me-img" src="1872a1b50c59bbcc815d.png" alt="">
                             </picture>
                             <div class="img-name">Andrew Tran</div>
                         </div>
@@ -31,9 +31,9 @@
                             <h2>About me</h2>
                             <p class="about-me-text">Hey there! I am a self-taught programmer who wants to pursue a career in web development. My original background comes from electrical engineering, working with power system distribution for buildings. I have always been a <em>DIY</em>, hands-on kind of guy who enjoys designing and creating things. Hobbies of mine include wood-working, 3D printing, rock-climbing, and of course... video games.</p>
                             <div class="about-btns">
-                                <a href="https://github.com/andrewtran28"><img class="contact-icon" src="./img/icons/github-mark.png"></a>
-                                <img class="contact-icon" src="./img/icons/linkedin.png">
-                                <img class="contact-icon" src="./img/icons/twitter.png">
+                                <a href="https://github.com/andrewtran28"><img class="contact-icon" src="63244b7a025609f35e0c.png"></a>
+                                <img class="contact-icon" src="d336f199e8bb505c6b95.png">
+                                <img class="contact-icon" src="d744c9c1f3004d23cc1d.png">
                             </div>
                         </div>
                     </section>
@@ -42,106 +42,106 @@
 
             <section class="projects-cont">
                 <div class="project">
-                    <img class="project-img" src="./img/projects/battleship.png">
+                    <img class="project-img" src="79c31720a3de16251b19.png">
                     <div class="project-sub">
                         <div class="project-name">Battleship</div>
                         <div class="project-text">Webapp of the classic <em>Battleship</em> game. Play against a computer player and try to destroy all of their ships before they destroy yours.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/battleship">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/battleship/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/weather-app.png">
+                    <img class="project-img" src="5df3ce03f35316106862.png">
                     <div class="project-sub">
                         <div class="project-name">myWeather App</div>
                         <div class="project-text">This is a webapp that takes a given location and retrieves weather data from <em>Visual Crossing</em> API. The data is shown, as well as a related GIF from <em>GIPHY</em>.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/weather-app">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/weather-app/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/tictactoe.png">
+                    <img class="project-img" src="2255bb930e22397c56aa.png">
                     <div class="project-sub">
                         <div class="project-name">Tic-Tac-Toe</div>
                         <div class="project-text">Play a game of <em>Tic-Tac-Toe</em> against another player.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/tic-tac-toe">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/tic-tac-toe/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/admin-dashboard.png">
+                    <img class="project-img" src="3e55e1f74e6972904020.png">
                     <div class="project-sub">
                         <div class="project-name">Admin Dashboard</div>
                         <div class="project-text">A webpage layout design for a general dashboard on the admin page.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/admin-dashboard">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/admin-dashboard/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/library.png">
+                    <img class="project-img" src="99ea0ec6257f91c6061d.png">
                     <div class="project-sub">
                         <div class="project-name">Library</div>
                         <div class="project-text"><em>My Library</em> is a simple library webapp concept that displays user-inputted book entries and keeping track of which books are read.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/library">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/library/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/etch-pad.png">
+                    <img class="project-img" src="d03f3e42bdbb4fc936e0.png">
                     <div class="project-sub">
                         <div class="project-name">Etch-Pad</div>
                         <div class="project-text">The <em>magic Etch-Pad</em> is a webapp that allows you to paint on a customizable board. Features include random colour mode, erase mode, and resizing the resolution of the canvas.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/etch-pad">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/etch-pad/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/calculator.png">
+                    <img class="project-img" src="fa4278761a9fdd8d9f1e.png">
                     <div class="project-sub">
                         <div class="project-name">Simple Calculator</div>
                         <div class="project-text">As the project name implies, this is a basic webapp that contains a functional, <em>no-frills</em> calculator.</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/calculator">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/calculator/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
                 <div class="project">
-                    <img class="project-img" src="./img/projects/signup-form.png">
+                    <img class="project-img" src="bc86b91bcf34d3110f05.png">
                     <div class="project-sub">
                         <div class="project-name">Sign-Up Form</div>
                         <div class="project-text">A webpage layout design for a "sign-up" form. A small concept project that demonstrates form filling and different types of input field requirements. (Please do not submit any real data).</div>
                         <div class="project-btns">
                             <a href="https://github.com/andrewtran28/signup-form">
-                                <img class="icon" src="./img/icons/github-mark.png"></a>
+                                <img class="icon" src="63244b7a025609f35e0c.png"></a>
                             <a target="_blank" rel="noopener noreferrer" href="https://andrewtran28.github.io/signup-form/">
-                                <img class="icon" src="./img/icons/external-link.png"></a>
+                                <img class="icon" src="9f260ab6892c1441859a.png"></a>
                         </div>
                     </div>
                 </div>
@@ -155,23 +155,23 @@
                 <p><span>123 Capital Street</span><br>
                     <span>Ottawa, Ontario, Canada</span>   
                     <div class="contact-card">
-                        <img class="icon" src="./img/icons/phone.png">
+                        <img class="icon" src="087b47db2b112c07bb85.png">
                         <span>613-555-5555</span><br>
                     </div>
                     <div class="contact-card">
-                        <img class="icon" src="./img/icons/email.png">
+                        <img class="icon" src="74e2a37f447d7fd627ce.png">
                         <span>andrew.tran@fakemail.com</span>
                     </div>
                     <div class="contact-btns">
-                        <a href="https://github.com/andrewtran28"><img class="contact-icon" src="./img/icons/github-mark_light.png"></a>
-                        <img class="contact-icon" src="./img/icons/linkedin_light.png">
-                        <img class="contact-icon" src="./img/icons/twitter_light.png">
+                        <a href="https://github.com/andrewtran28"><img class="contact-icon" src="0fb264fc7472b451cf9f.png"></a>
+                        <img class="contact-icon" src="09d61ab499f2f2b0ca17.png">
+                        <img class="contact-icon" src="819c49aeabcbf37f1efa.png">
                     </div>
                 </p> 
             </div>
             <picture>
-                <source id="contact-img" media="(max-width: 1050px)" srcset="./img/minglee2-2.png">
-                <img id="contact-img" src="./img/minglee2.png" alt="">
+                <source id="contact-img" media="(max-width: 1050px)" srcset="fa82ca35f39c9062dfc9.png">
+                <img id="contact-img" src="02285049d607e8c078c5.png" alt="">
             </picture>
         </footer>
     </body>
